[gd_scene load_steps=4 format=2]

[ext_resource path="res://ExampleWorld.gd" type="Script" id=1]
[ext_resource path="res://UDPNetwork.tscn" type="PackedScene" id=2]
[ext_resource path="res://ExampleObject.tscn" type="PackedScene" id=3]

[node name="ExampleWorld" type="Node2D" index="0"]

script = ExtResource( 1 )

[node name="Timer" type="Timer" parent="." index="0"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = true

[node name="UDPNetwork" parent="." index="1" instance=ExtResource( 2 )]

[node name="ExampleObject" parent="." index="2" instance=ExtResource( 3 )]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]

[connection signal="object_received" from="UDPNetwork" to="." method="_on_UDPNetwork_object_received"]


